fix(api): ensure all endpoints are 100% dynamic without hardcoded default sync codes