@@ -45,9 +45,12 @@ public class ActivationApiController {
     private com.smartdine.repository.UserRepository userRepository;
 
     @Autowired
+    private org.springframework.jdbc.core.JdbcTemplate jdbcTemplate;
+
+    @Autowired
     private ProvisioningController provisioningController;
 
-    @RequestMapping(value = "/reset-all-accounts", method = {RequestMethod.GET, RequestMethod.POST})
+    @RequestMapping(value = "/reset-all-accounts", method = { RequestMethod.GET, RequestMethod.POST })
     public ResponseEntity<?> resetAllAccounts() {
         try {
             kotRepository.deleteAll();
@@ -63,29 +66,64 @@ public class ActivationApiController {
 
             // Delete all activation JSON files locally and in C:/SmartDine/
             java.util.List<java.io.File> dirs = java.util.List.of(
-                new java.io.File("."),
-                new java.io.File("core-heart/core-heart"),
-                new java.io.File("C:/SmartDine")
-            );
+                    new java.io.File("."),
+                    new java.io.File("core-heart/core-heart"),
+                    new java.io.File("C:/SmartDine"));
             for (java.io.File dir : dirs) {
                 if (dir.exists() && dir.isDirectory()) {
-                    java.io.File[] files = dir.listFiles((d, name) -> name.startsWith("activation-") && name.endsWith(".json"));
+                    java.io.File[] files = dir
+                            .listFiles((d, name) -> name.startsWith("activation-") && name.endsWith(".json"));
                     if (files != null) {
                         for (java.io.File f : files) {
-                            try { f.delete(); } catch (Exception ignored) {}
+                            try {
+                                f.delete();
+                            } catch (Exception ignored) {
+                            }
                         }
                     }
                 }
             }
 
             return ResponseEntity.ok(Map.of(
+                    "success", true,
+                    "message",
+                    "All accounts, activation files, menu items, and tables have been completely purged! System ready for new account creation."));
+        } catch (Exception e) {
+            return ResponseEntity.status(500).body(Map.of("error", e.getMessage()));
+        }
+    }
+
+    @RequestMapping(value = "/keep-only", method = { RequestMethod.GET, RequestMethod.POST })
+    public ResponseEntity<?> keepOnlyAccount(@RequestParam String code) {
+        try {
+            String targetCode = code.trim();
+            var targetRestOpt = restaurantRepository.findBySyncCodeAndIsDeletedFalse(targetCode)
+                .or(() -> restaurantRepository.findByBillerSyncCode(targetCode));
+
+            if (targetRestOpt.isEmpty()) {
+                return ResponseEntity.badRequest().body(Map.of("success", false, "error", "Target sync code " + targetCode + " not found in database. Cannot purge others."));
+            }
+
+            com.smartdine.coreheart.Restaurant targetRest = targetRestOpt.get();
+            java.util.UUID keepId = targetRest.getRestaurantId() != null ? targetRest.getRestaurantId() : targetRest.getId();
+
+            // Purge all other restaurants and users except target
+            int deletedRest = jdbcTemplate.update("DELETE FROM restaurants WHERE restaurant_id != ? AND id != ?", keepId, keepId);
+            jdbcTemplate.update("DELETE FROM app_users WHERE restaurant_id != ?", keepId);
+
+            return ResponseEntity.ok(Map.of(
                 "success", true,
-                "message", "All accounts, activation files, menu items, and tables have been completely purged! System ready for new account creation."
+                "retainedAccount", targetRest.getName(),
+                "syncCode", targetCode,
+                "deletedCount", deletedRest,
+                "message", "Retained account " + targetRest.getName() + " (" + targetCode + ") and purged all other accounts."
             ));
         } catch (Exception e) {
             return ResponseEntity.status(500).body(Map.of("error", e.getMessage()));
         }
     }
+
+
 
     private static final java.util.concurrent.ConcurrentHashMap<String, Long> lastBillerPingMap = new java.util.concurrent.ConcurrentHashMap<>();
 
@@ -103,7 +141,8 @@ public class ActivationApiController {
         Long lastPing = lastBillerPingMap.get(key);
         long now = System.currentTimeMillis();
         boolean active = (lastPing != null) && ((now - lastPing) < 45000);
-        return ResponseEntity.ok(Map.of("active", active, "lastPing", lastPing != null ? lastPing : 0, "status", active ? "ACTIVE" : "DISCONNECTED"));
+        return ResponseEntity.ok(Map.of("active", active, "lastPing", lastPing != null ? lastPing : 0, "status",
+                active ? "ACTIVE" : "DISCONNECTED"));
     }
 
     @GetMapping("/status")
@@ -111,13 +150,11 @@ public class ActivationApiController {
         boolean activated = activationService.isSystemActivated();
         var configOpt = activationService.getSystemConfig();
         return ResponseEntity.ok(Map.of(
-            "activated", activated,
-            "restaurantId", configOpt.map(c -> c.getRestaurantId().toString()).orElse(""),
-            "restaurantName", configOpt.map(c -> c.getRestaurantName()).orElse("SmartDine Restaurant"),
-            "syncCode", configOpt.map(c -> c.getActivationCode()).orElse("SD-28E792")
-        ));
+                "activated", activated,
+                "restaurantId", configOpt.map(c -> c.getRestaurantId().toString()).orElse(""),
+                "restaurantName", configOpt.map(c -> c.getRestaurantName()).orElse("SmartDine Restaurant"),
+                "syncCode", configOpt.map(c -> c.getActivationCode()).orElse("SD-28E792")));
     }
-
 
     @GetMapping("/activate")
     public ResponseEntity<?> activateViaGet(@RequestParam String code) {
@@ -146,20 +183,31 @@ public class ActivationApiController {
             for (java.io.File file : files) {
                 try {
                     Map map = mapper.readValue(file, Map.class);
-                    String rName = map.get("restaurantName") != null ? map.get("restaurantName").toString().trim().toLowerCase() : "";
-                    String rPhone = map.get("ownerPhone") != null ? map.get("ownerPhone").toString().replaceAll("\\D", "") : "";
-                    String rEmail = map.get("ownerEmail") != null ? map.get("ownerEmail").toString().trim().toLowerCase() : "";
+                    String rName = map.get("restaurantName") != null
+                            ? map.get("restaurantName").toString().trim().toLowerCase()
+                            : "";
+                    String rPhone = map.get("ownerPhone") != null
+                            ? map.get("ownerPhone").toString().replaceAll("\\D", "")
+                            : "";
+                    String rEmail = map.get("ownerEmail") != null
+                            ? map.get("ownerEmail").toString().trim().toLowerCase()
+                            : "";
 
                     if (!cleanedName.isEmpty() && rName.equals(cleanedName)) {
-                        return ResponseEntity.ok(Map.of("available", false, "reason", "Restaurant Name '" + restaurantName + "' is already registered. Please choose a different restaurant name."));
+                        return ResponseEntity
+                                .ok(Map.of("available", false, "reason", "Restaurant Name '" + restaurantName
+                                        + "' is already registered. Please choose a different restaurant name."));
                     }
                     if (!cleanedPhone.isEmpty() && !rPhone.isEmpty() && rPhone.contains(cleanedPhone)) {
-                        return ResponseEntity.ok(Map.of("available", false, "reason", "Mobile Number '" + phone + "' is already registered. Please use a different mobile number."));
+                        return ResponseEntity.ok(Map.of("available", false, "reason", "Mobile Number '" + phone
+                                + "' is already registered. Please use a different mobile number."));
                     }
                     if (!cleanedEmail.isEmpty() && !rEmail.isEmpty() && rEmail.equals(cleanedEmail)) {
-                        return ResponseEntity.ok(Map.of("available", false, "reason", "Email address '" + email + "' is already registered. Please sign in instead."));
+                        return ResponseEntity.ok(Map.of("available", false, "reason",
+                                "Email address '" + email + "' is already registered. Please sign in instead."));
                     }
-                } catch (Exception ignored) {}
+                } catch (Exception ignored) {
+                }
             }
         }
 
@@ -201,37 +249,44 @@ public class ActivationApiController {
             String restId = request.get("restaurantId") != null ? request.get("restaurantId").toString() : null;
             if (restId == null || restId.isEmpty()) {
                 restId = restaurantRepository.findBySyncCodeAndIsDeletedFalse(syncCode.trim())
-                    .map(r -> r.getRestaurantId().toString())
-                    .orElseGet(() -> systemConfigRepository.findAll().stream()
-                        .findFirst()
-                        .map(c -> c.getRestaurantId().toString())
-                        .orElse("9183522f-e62b-4cdc-b852-cac4b347cbc8"));
+                        .map(r -> r.getRestaurantId().toString())
+                        .orElseGet(() -> systemConfigRepository.findAll().stream()
+                                .findFirst()
+                                .map(c -> c.getRestaurantId().toString())
+                                .orElse("9183522f-e62b-4cdc-b852-cac4b347cbc8"));
             }
-            
+
             String restName = request.get("restaurantName") != null ? request.get("restaurantName").toString() : null;
             if (restName == null && request.get("profile") instanceof Map) {
                 Object pName = ((Map) request.get("profile")).get("restaurantName");
-                if (pName != null) restName = pName.toString();
+                if (pName != null)
+                    restName = pName.toString();
             }
-            if (restName == null || restName.isEmpty()) restName = "SmartDine Restaurant";
+            if (restName == null || restName.isEmpty())
+                restName = "SmartDine Restaurant";
 
             String ownerName = request.get("ownerName") != null ? request.get("ownerName").toString() : null;
             if (ownerName == null && request.get("profile") instanceof Map) {
                 Object pOwner = ((Map) request.get("profile")).get("ownerName");
-                if (pOwner != null) ownerName = pOwner.toString();
+                if (pOwner != null)
+                    ownerName = pOwner.toString();
             }
-            if (ownerName == null) ownerName = "Manager";
+            if (ownerName == null)
+                ownerName = "Manager";
 
             String ownerEmail = request.get("ownerEmail") != null ? request.get("ownerEmail").toString() : "";
 
             String fileName = "activation-" + syncCode.trim().toLowerCase() + ".json";
             java.io.File file = new java.io.File(fileName);
             com.fasterxml.jackson.databind.ObjectMapper mapper = new com.fasterxml.jackson.databind.ObjectMapper();
-            
-            java.util.List<Map<String, Object>> incomingTables = (java.util.List<Map<String, Object>>) request.get("tables");
-            java.util.List<Map<String, Object>> incomingMenuItems = (java.util.List<Map<String, Object>>) request.get("menuItems");
-            java.util.List<Map<String, Object>> incomingWaiters = (java.util.List<Map<String, Object>>) request.get("waiters");
-            
+
+            java.util.List<Map<String, Object>> incomingTables = (java.util.List<Map<String, Object>>) request
+                    .get("tables");
+            java.util.List<Map<String, Object>> incomingMenuItems = (java.util.List<Map<String, Object>>) request
+                    .get("menuItems");
+            java.util.List<Map<String, Object>> incomingWaiters = (java.util.List<Map<String, Object>>) request
+                    .get("waiters");
+
             java.util.Set<String> categories = new java.util.HashSet<>();
             if (incomingMenuItems != null) {
                 for (Map<String, Object> item : incomingMenuItems) {
@@ -240,33 +295,36 @@ public class ActivationApiController {
                     }
                 }
             }
-            
+
             java.util.List<Map<String, Object>> mappedTables = new java.util.ArrayList<>();
             if (incomingTables != null) {
                 for (Map<String, Object> t : incomingTables) {
                     String number = t.get("number") != null ? t.get("number").toString() : "";
                     String prefix = number.startsWith("T-") ? "" : "T-";
                     String tableNum = prefix + number;
-                    
+
                     Map<String, Object> tMap = new java.util.HashMap<>();
                     tMap.put("tableNumber", tableNum);
-                    tMap.put("capacity", t.get("capacity") != null ? Integer.parseInt(t.get("capacity").toString()) : 4);
+                    tMap.put("capacity",
+                            t.get("capacity") != null ? Integer.parseInt(t.get("capacity").toString()) : 4);
                     tMap.put("areaName", t.get("area") != null ? t.get("area").toString() : "General");
                     mappedTables.add(tMap);
                 }
             }
-            
+
             java.util.List<Map<String, Object>> mappedMenuItems = new java.util.ArrayList<>();
             java.util.Set<String> usedCodes = new java.util.HashSet<>();
             if (incomingMenuItems != null) {
                 int codeCounter = 1;
                 for (Map<String, Object> item : incomingMenuItems) {
                     String name = item.get("name") != null ? item.get("name").toString() : "Item";
-                    String baseCode = item.get("code") != null && !item.get("code").toString().trim().isEmpty() 
-                        ? item.get("code").toString().trim().toUpperCase() 
-                        : (name.length() >= 3 ? name.substring(0, 3).toUpperCase().replaceAll("[^A-Z0-9]", "") : "ITM");
-                    if (baseCode.isEmpty()) baseCode = "ITM";
-                    
+                    String baseCode = item.get("code") != null && !item.get("code").toString().trim().isEmpty()
+                            ? item.get("code").toString().trim().toUpperCase()
+                            : (name.length() >= 3 ? name.substring(0, 3).toUpperCase().replaceAll("[^A-Z0-9]", "")
+                                    : "ITM");
+                    if (baseCode.isEmpty())
+                        baseCode = "ITM";
+
                     String shortCode = baseCode;
                     while (usedCodes.contains(shortCode)) {
                         shortCode = baseCode + (codeCounter++);
@@ -284,10 +342,12 @@ public class ActivationApiController {
                     } else if (item.get("type") != null) {
                         veg = item.get("type").toString().equalsIgnoreCase("Veg");
                     }
-                    
-                    String category = item.get("categoryName") != null ? item.get("categoryName").toString() : (item.get("category") != null ? item.get("category").toString() : "General");
-                    if (category == null || category.trim().isEmpty()) category = "General";
-                    
+
+                    String category = item.get("categoryName") != null ? item.get("categoryName").toString()
+                            : (item.get("category") != null ? item.get("category").toString() : "General");
+                    if (category == null || category.trim().isEmpty())
+                        category = "General";
+
                     Map<String, Object> mItemMap = new java.util.HashMap<>();
                     mItemMap.put("name", name);
                     mItemMap.put("shortCode", shortCode);
@@ -297,25 +357,29 @@ public class ActivationApiController {
                     mappedMenuItems.add(mItemMap);
                 }
             }
-            
+
             java.util.List<Map<String, Object>> mappedWaiters = new java.util.ArrayList<>();
             if (incomingWaiters != null) {
                 for (Map<String, Object> w : incomingWaiters) {
                     Map<String, Object> wMap = new java.util.HashMap<>();
                     wMap.put("name", w.get("name") != null ? w.get("name").toString() : "");
-                    wMap.put("pin", w.get("pin") != null ? w.get("pin").toString() : (w.get("code") != null ? w.get("code").toString() : ""));
+                    wMap.put("pin", w.get("pin") != null ? w.get("pin").toString()
+                            : (w.get("code") != null ? w.get("code").toString() : ""));
                     wMap.put("status", w.get("status") != null ? w.get("status").toString() : "Active");
                     mappedWaiters.add(wMap);
                 }
             }
-            
-            java.util.List<Map<String, Object>> incomingAddons = (java.util.List<Map<String, Object>>) request.get("addons");
+
+            java.util.List<Map<String, Object>> incomingAddons = (java.util.List<Map<String, Object>>) request
+                    .get("addons");
             java.util.List<Map<String, Object>> modifierOptions = new java.util.ArrayList<>();
 
             if (incomingAddons != null && !incomingAddons.isEmpty()) {
                 for (Map<String, Object> addonMap : incomingAddons) {
                     if (addonMap.get("name") != null) {
-                        double price = addonMap.get("price") != null ? Double.parseDouble(addonMap.get("price").toString()) : 0.0;
+                        double price = addonMap.get("price") != null
+                                ? Double.parseDouble(addonMap.get("price").toString())
+                                : 0.0;
                         Map<String, Object> optMap = new java.util.HashMap<>();
                         optMap.put("name", addonMap.get("name").toString().trim());
                         optMap.put("price", price);
@@ -325,7 +389,8 @@ public class ActivationApiController {
             } else {
                 try {
                     java.util.UUID rUuid = java.util.UUID.fromString(restId);
-                    java.util.List<com.smartdine.coreheart.AddonItem> liveAddons = addonItemRepository.findByRestaurantId(rUuid);
+                    java.util.List<com.smartdine.coreheart.AddonItem> liveAddons = addonItemRepository
+                            .findByRestaurantId(rUuid);
                     for (com.smartdine.coreheart.AddonItem ai : liveAddons) {
                         if (ai.isAvailable() && ai.getName() != null) {
                             Map<String, Object> optMap = new java.util.HashMap<>();
@@ -334,7 +399,8 @@ public class ActivationApiController {
                             modifierOptions.add(optMap);
                         }
                     }
-                } catch (Exception ignored) {}
+                } catch (Exception ignored) {
+                }
             }
 
             Map<String, Object> globalGroup = new java.util.HashMap<>();
@@ -342,46 +408,75 @@ public class ActivationApiController {
             globalGroup.put("isGlobal", true);
             globalGroup.put("options", modifierOptions);
             java.util.List<Map<String, Object>> modifierGroups = java.util.List.of(globalGroup);
-            
+
             Map<String, Object> gatewayPayload = new java.util.HashMap<>();
             gatewayPayload.put("restaurantId", restId);
             gatewayPayload.put("restaurantName", restName);
             gatewayPayload.put("ownerName", ownerName);
             gatewayPayload.put("ownerEmail", ownerEmail);
-            gatewayPayload.put("cgstRate", request.get("cgstRate") != null ? new java.math.BigDecimal(request.get("cgstRate").toString()) : new java.math.BigDecimal("2.50"));
-            gatewayPayload.put("sgstRate", request.get("sgstRate") != null ? new java.math.BigDecimal(request.get("sgstRate").toString()) : new java.math.BigDecimal("2.50"));
+            gatewayPayload.put("cgstRate",
+                    request.get("cgstRate") != null ? new java.math.BigDecimal(request.get("cgstRate").toString())
+                            : new java.math.BigDecimal("2.50"));
+            gatewayPayload.put("sgstRate",
+                    request.get("sgstRate") != null ? new java.math.BigDecimal(request.get("sgstRate").toString())
+                            : new java.math.BigDecimal("2.50"));
             gatewayPayload.put("serviceChargeRate", new java.math.BigDecimal("5.00"));
             gatewayPayload.put("taxEnabled", request.get("taxEnabled") != null ? request.get("taxEnabled") : true);
-            gatewayPayload.put("deliveryChargeEnabled", request.get("deliveryChargeEnabled") != null ? request.get("deliveryChargeEnabled") : false);
-            gatewayPayload.put("defaultDeliveryFee", request.get("defaultDeliveryFee") != null ? Double.parseDouble(request.get("defaultDeliveryFee").toString()) : 0.0);
-            gatewayPayload.put("packingChargeEnabled", request.get("packingChargeEnabled") != null ? request.get("packingChargeEnabled") : false);
-            gatewayPayload.put("defaultPackingFee", request.get("defaultPackingFee") != null ? Double.parseDouble(request.get("defaultPackingFee").toString()) : 0.0);
+            gatewayPayload.put("deliveryChargeEnabled",
+                    request.get("deliveryChargeEnabled") != null ? request.get("deliveryChargeEnabled") : false);
+            gatewayPayload.put("defaultDeliveryFee",
+                    request.get("defaultDeliveryFee") != null
+                            ? Double.parseDouble(request.get("defaultDeliveryFee").toString())
+                            : 0.0);
+            gatewayPayload.put("packingChargeEnabled",
+                    request.get("packingChargeEnabled") != null ? request.get("packingChargeEnabled") : false);
+            gatewayPayload.put("defaultPackingFee",
+                    request.get("defaultPackingFee") != null
+                            ? Double.parseDouble(request.get("defaultPackingFee").toString())
+                            : 0.0);
             gatewayPayload.put("categories", new java.util.ArrayList<>(categories));
             gatewayPayload.put("tables", mappedTables);
             gatewayPayload.put("menuItems", mappedMenuItems);
             gatewayPayload.put("modifierGroups", modifierGroups);
             gatewayPayload.put("waiters", mappedWaiters);
-            
-            // Save payload to root and fallback paths safely (handles Program Files read-only permissions gracefully)
-            try { mapper.writeValue(file, gatewayPayload); } catch (Exception ignored) {}
+
+            // Save payload to root and fallback paths safely (handles Program Files
+            // read-only permissions gracefully)
+            try {
+                mapper.writeValue(file, gatewayPayload);
+            } catch (Exception ignored) {
+            }
             try {
                 java.io.File smartDineDir = new java.io.File("C:/SmartDine");
-                if (!smartDineDir.exists()) smartDineDir.mkdirs();
+                if (!smartDineDir.exists())
+                    smartDineDir.mkdirs();
                 mapper.writeValue(new java.io.File(smartDineDir, fileName), gatewayPayload);
                 mapper.writeValue(new java.io.File(smartDineDir, "activation-data.json"), gatewayPayload);
-            } catch (Exception ignored) {}
-            try { mapper.writeValue(new java.io.File("core-heart/" + fileName), gatewayPayload); } catch (Exception ignored) {}
-            try { mapper.writeValue(new java.io.File("core-heart/core-heart/" + fileName), gatewayPayload); } catch (Exception ignored) {}
-            try { mapper.writeValue(new java.io.File("activation-data.json"), gatewayPayload); } catch (Exception ignored) {}
-            
-            // Immediately sync payload directly into the active PostgreSQL database tables (menu_items, dining_tables, etc.)
+            } catch (Exception ignored) {
+            }
+            try {
+                mapper.writeValue(new java.io.File("core-heart/" + fileName), gatewayPayload);
+            } catch (Exception ignored) {
+            }
+            try {
+                mapper.writeValue(new java.io.File("core-heart/core-heart/" + fileName), gatewayPayload);
+            } catch (Exception ignored) {
+            }
+            try {
+                mapper.writeValue(new java.io.File("activation-data.json"), gatewayPayload);
+            } catch (Exception ignored) {
+            }
+
+            // Immediately sync payload directly into the active PostgreSQL database tables
+            // (menu_items, dining_tables, etc.)
             try {
                 activationService.syncCloudConfiguration(gatewayPayload);
-                System.out.println("☁️ Live Sync: Web configuration successfully saved directly into PostgreSQL database.");
+                System.out.println(
+                        "☁️ Live Sync: Web configuration successfully saved directly into PostgreSQL database.");
             } catch (Exception e) {
                 System.err.println("⚠️ Notice: Direct DB sync: " + e.getMessage());
             }
-            
+
             return ResponseEntity.ok(Map.of("success", true, "code", syncCode));
         } catch (Exception e) {
             e.printStackTrace();
@@ -411,31 +506,31 @@ public class ActivationApiController {
 
             if (restaurantId == null) {
                 return ResponseEntity.ok(Map.of(
-                    "tables", java.util.List.of(),
-                    "menuItems", java.util.List.of(),
-                    "categories", java.util.List.of(),
-                    "waiters", java.util.List.of(),
-                    "addons", java.util.List.of()
-                ));
+                        "tables", java.util.List.of(),
+                        "menuItems", java.util.List.of(),
+                        "categories", java.util.List.of(),
+                        "waiters", java.util.List.of(),
+                        "addons", java.util.List.of()));
             }
 
             com.smartdine.coreheart.TenantContext.setRestaurantId(restaurantId);
 
             // Fetch live tables from database
-            java.util.List<com.smartdine.coreheart.DiningTable> tables = tableRepository.findByRestaurantId(restaurantId);
+            java.util.List<com.smartdine.coreheart.DiningTable> tables = tableRepository
+                    .findByRestaurantId(restaurantId);
             java.util.List<Map<String, Object>> mappedTables = new java.util.ArrayList<>();
             for (var t : tables) {
                 mappedTables.add(Map.of(
-                    "id", t.getId().toString(),
-                    "number", t.getTableNumber(),
-                    "area", t.getAreaName() != null ? t.getAreaName() : "General",
-                    "capacity", t.getCapacity(),
-                    "status", t.getStatus() != null ? t.getStatus().name() : "Available"
-                ));
+                        "id", t.getId().toString(),
+                        "number", t.getTableNumber(),
+                        "area", t.getAreaName() != null ? t.getAreaName() : "General",
+                        "capacity", t.getCapacity(),
+                        "status", t.getStatus() != null ? t.getStatus().name() : "Available"));
             }
 
             // Fetch live menu items from database
-            java.util.List<com.smartdine.coreheart.MenuItem> menuItems = menuRepository.findByRestaurantIdAndIsDeletedFalse(restaurantId);
+            java.util.List<com.smartdine.coreheart.MenuItem> menuItems = menuRepository
+                    .findByRestaurantIdAndIsDeletedFalse(restaurantId);
             java.util.List<Map<String, Object>> mappedMenuItems = new java.util.ArrayList<>();
             java.util.Set<String> categories = new java.util.LinkedHashSet<>();
 
@@ -443,54 +538,53 @@ public class ActivationApiController {
                 String cat = item.getCategoryName() != null ? item.getCategoryName() : "General";
                 categories.add(cat);
                 mappedMenuItems.add(Map.of(
-                    "id", item.getId().toString(),
-                    "name", item.getName(),
-                    "code", item.getShortCode() != null ? item.getShortCode() : "ITM",
-                    "category", cat,
-                    "categoryName", cat,
-                    "price", item.getPrice() != null ? item.getPrice().doubleValue() : 0.0,
-                    "veg", item.isVeg(),
-                    "type", item.isVeg() ? "Veg" : "Non-Veg",
-                    "status", item.isAvailable() ? "Available" : "Stock Out"
-                ));
+                        "id", item.getId().toString(),
+                        "name", item.getName(),
+                        "code", item.getShortCode() != null ? item.getShortCode() : "ITM",
+                        "category", cat,
+                        "categoryName", cat,
+                        "price", item.getPrice() != null ? item.getPrice().doubleValue() : 0.0,
+                        "veg", item.isVeg(),
+                        "type", item.isVeg() ? "Veg" : "Non-Veg",
+                        "status", item.isAvailable() ? "Available" : "Stock Out"));
             }
 
             // Fetch live categories from categoryRepository
-            java.util.List<com.smartdine.coreheart.Category> dbCats = categoryRepository.findByRestaurantId(restaurantId);
+            java.util.List<com.smartdine.coreheart.Category> dbCats = categoryRepository
+                    .findByRestaurantId(restaurantId);
             for (var c : dbCats) {
                 categories.add(c.getName());
             }
 
             // Fetch live waiters
-            java.util.List<com.smartdine.coreheart.AppUser> dbWaiters = userRepository.findByRestaurantIdAndRoleAndIsActiveTrue(restaurantId, com.smartdine.coreheart.UserRole.WAITER);
+            java.util.List<com.smartdine.coreheart.AppUser> dbWaiters = userRepository
+                    .findByRestaurantIdAndRoleAndIsActiveTrue(restaurantId, com.smartdine.coreheart.UserRole.WAITER);
             java.util.List<Map<String, Object>> mappedWaiters = new java.util.ArrayList<>();
             for (var w : dbWaiters) {
                 mappedWaiters.add(Map.of(
-                    "name", w.getFullName() != null ? w.getFullName() : w.getUsername(),
-                    "code", w.getPin() != null ? w.getPin() : "1234",
-                    "status", "Active"
-                ));
+                        "name", w.getFullName() != null ? w.getFullName() : w.getUsername(),
+                        "code", w.getPin() != null ? w.getPin() : "1234",
+                        "status", "Active"));
             }
 
             // Fetch live addons
-            java.util.List<com.smartdine.coreheart.AddonItem> dbAddons = addonItemRepository.findByRestaurantId(restaurantId);
+            java.util.List<com.smartdine.coreheart.AddonItem> dbAddons = addonItemRepository
+                    .findByRestaurantId(restaurantId);
             java.util.List<Map<String, Object>> mappedAddons = new java.util.ArrayList<>();
             for (var a : dbAddons) {
                 mappedAddons.add(Map.of(
-                    "name", a.getName(),
-                    "price", a.getPrice() != null ? a.getPrice().doubleValue() : 0.0,
-                    "status", a.isAvailable() ? "Active" : "Inactive"
-                ));
+                        "name", a.getName(),
+                        "price", a.getPrice() != null ? a.getPrice().doubleValue() : 0.0,
+                        "status", a.isAvailable() ? "Active" : "Inactive"));
             }
 
             return ResponseEntity.ok(Map.of(
-                "restaurantId", restaurantId.toString(),
-                "tables", mappedTables,
-                "menuItems", mappedMenuItems,
-                "categories", new java.util.ArrayList<>(categories),
-                "waiters", mappedWaiters,
-                "addons", mappedAddons
-            ));
+                    "restaurantId", restaurantId.toString(),
+                    "tables", mappedTables,
+                    "menuItems", mappedMenuItems,
+                    "categories", new java.util.ArrayList<>(categories),
+                    "waiters", mappedWaiters,
+                    "addons", mappedAddons));
         } catch (Exception e) {
             return ResponseEntity.status(500).body(Map.of("error", e.getMessage()));
         }
@@ -502,7 +596,8 @@ public class ActivationApiController {
 
         // 1. Try resolving restaurantId from sync code
         if (code != null && !code.trim().isEmpty()) {
-            java.util.Optional<com.smartdine.coreheart.Restaurant> restOpt = restaurantRepository.findBySyncCodeAndIsDeletedFalse(code.trim());
+            java.util.Optional<com.smartdine.coreheart.Restaurant> restOpt = restaurantRepository
+                    .findBySyncCodeAndIsDeletedFalse(code.trim());
             if (restOpt.isPresent()) {
                 restaurantId = restOpt.get().getRestaurantId();
             }
@@ -525,26 +620,30 @@ public class ActivationApiController {
         }
 
         // 4. Query all orders of last 30 days
-        java.time.LocalDateTime startOfThirtyDaysAgo = java.time.LocalDateTime.now().minusDays(30).withHour(0).withMinute(0).withSecond(0).withNano(0);
-        java.util.List<com.smartdine.coreheart.Order> allOrders = orderRepository.findByRestaurantIdAndStartedAtAfter(restaurantId, startOfThirtyDaysAgo);
-        
+        java.time.LocalDateTime startOfThirtyDaysAgo = java.time.LocalDateTime.now().minusDays(30).withHour(0)
+                .withMinute(0).withSecond(0).withNano(0);
+        java.util.List<com.smartdine.coreheart.Order> allOrders = orderRepository
+                .findByRestaurantIdAndStartedAtAfter(restaurantId, startOfThirtyDaysAgo);
+
         if (allOrders.isEmpty()) {
             // Fallback 1: Try SystemConfig restaurantId if different
             java.util.Optional<com.smartdine.coreheart.SystemConfig> sysOpt = activationService.getSystemConfig();
             if (sysOpt.isPresent() && !sysOpt.get().getRestaurantId().equals(restaurantId)) {
-                allOrders = orderRepository.findByRestaurantIdAndStartedAtAfter(sysOpt.get().getRestaurantId(), startOfThirtyDaysAgo);
+                allOrders = orderRepository.findByRestaurantIdAndStartedAtAfter(sysOpt.get().getRestaurantId(),
+                        startOfThirtyDaysAgo);
             }
         }
 
         if (allOrders.isEmpty()) {
             // Fallback 2: Retrieve all recent orders for local machine POS demo
             allOrders = orderRepository.findAll().stream()
-                .filter(o -> o.getStartedAt() != null && !o.getStartedAt().isBefore(startOfThirtyDaysAgo))
-                .collect(java.util.stream.Collectors.toList());
+                    .filter(o -> o.getStartedAt() != null && !o.getStartedAt().isBefore(startOfThirtyDaysAgo))
+                    .collect(java.util.stream.Collectors.toList());
         }
 
         // 5. Calculations for different time boundaries
-        java.time.LocalDateTime todayStart = java.time.LocalDateTime.now().withHour(0).withMinute(0).withSecond(0).withNano(0);
+        java.time.LocalDateTime todayStart = java.time.LocalDateTime.now().withHour(0).withMinute(0).withSecond(0)
+                .withNano(0);
         java.time.LocalDateTime yesterdayStart = todayStart.minusDays(1);
         java.time.LocalDateTime weekStart = todayStart.minusDays(7);
         java.time.LocalDateTime monthStart = todayStart.withDayOfMonth(1);
@@ -579,7 +678,7 @@ public class ActivationApiController {
                     todayOrderIds.add(o.getId());
                     todayOrdersCount++;
                     todaySales = todaySales.add(total);
-                    
+
                     // Channel sales
                     if (o.getType() == com.smartdine.coreheart.OrderType.DINE_IN) {
                         todayDineInSales = todayDineInSales.add(total);
@@ -595,23 +694,29 @@ public class ActivationApiController {
                     // Payment sales
                     String payMode = o.getPaymentMode();
                     if (payMode != null) {
-                        if (payMode.equalsIgnoreCase("UPI")) todayUpiSales = todayUpiSales.add(total);
-                        else if (payMode.equalsIgnoreCase("CASH")) todayCashSales = todayCashSales.add(total);
-                        else if (payMode.equalsIgnoreCase("CARD")) todayCardSales = todayCardSales.add(total);
+                        if (payMode.equalsIgnoreCase("UPI"))
+                            todayUpiSales = todayUpiSales.add(total);
+                        else if (payMode.equalsIgnoreCase("CASH"))
+                            todayCashSales = todayCashSales.add(total);
+                        else if (payMode.equalsIgnoreCase("CARD"))
+                            todayCardSales = todayCardSales.add(total);
                     } else {
                         todayCashSales = todayCashSales.add(total);
                     }
                 }
             } else if (!started.isBefore(yesterdayStart)) {
-                if (isNonCancelled) yesterdaySales = yesterdaySales.add(total);
+                if (isNonCancelled)
+                    yesterdaySales = yesterdaySales.add(total);
             }
 
             if (!started.isBefore(weekStart)) {
-                if (isNonCancelled) weeklySales = weeklySales.add(total);
+                if (isNonCancelled)
+                    weeklySales = weeklySales.add(total);
             }
 
             if (!started.isBefore(monthStart)) {
-                if (isNonCancelled) monthlySales = monthlySales.add(total);
+                if (isNonCancelled)
+                    monthlySales = monthlySales.add(total);
             }
         }
 
@@ -628,7 +733,8 @@ public class ActivationApiController {
         }
 
         // Fetch MenuItem prices to compute revenue per dish
-        java.util.List<com.smartdine.coreheart.MenuItem> menuItems = menuRepository.findByRestaurantIdAndIsDeletedFalse(restaurantId);
+        java.util.List<com.smartdine.coreheart.MenuItem> menuItems = menuRepository
+                .findByRestaurantIdAndIsDeletedFalse(restaurantId);
         java.util.Map<String, java.math.BigDecimal> itemPrices = new java.util.HashMap<>();
         for (com.smartdine.coreheart.MenuItem m : menuItems) {
             itemPrices.put(m.getName(), m.getPrice());
@@ -641,10 +747,9 @@ public class ActivationApiController {
             java.math.BigDecimal price = itemPrices.getOrDefault(name, java.math.BigDecimal.valueOf(150.0));
             java.math.BigDecimal revenue = price.multiply(java.math.BigDecimal.valueOf(qty));
             topDishes.add(Map.of(
-                "name", name,
-                "orders", qty,
-                "revenue", revenue.doubleValue()
-            ));
+                    "name", name,
+                    "orders", qty,
+                    "revenue", revenue.doubleValue()));
         }
 
         topDishes.sort((a, b) -> Double.compare((Double) b.get("revenue"), (Double) a.get("revenue")));
@@ -665,59 +770,79 @@ public class ActivationApiController {
         // Revenue distribution lists for Sales screen
         double totalSalesD = todaySales.doubleValue();
         java.util.List<Map<String, Object>> distribution = java.util.List.of(
-            Map.of("name", "Dine-In", "value", todayDineInSales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayDineInSales.doubleValue() * 100) / totalSalesD) : 0, "color", "#0B6B50"),
-            Map.of("name", "Takeaway", "value", todayTakeawaySales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayTakeawaySales.doubleValue() * 100) / totalSalesD) : 0, "color", "#F59E0B"),
-            Map.of("name", "Online", "value", todayDeliverySales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayDeliverySales.doubleValue() * 100) / totalSalesD) : 0, "color", "#3B82F6")
-        );
+                Map.of("name", "Dine-In", "value", todayDineInSales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayDineInSales.doubleValue() * 100) / totalSalesD) : 0, "color",
+                        "#0B6B50"),
+                Map.of("name", "Takeaway", "value", todayTakeawaySales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayTakeawaySales.doubleValue() * 100) / totalSalesD) : 0,
+                        "color", "#F59E0B"),
+                Map.of("name", "Online", "value", todayDeliverySales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayDeliverySales.doubleValue() * 100) / totalSalesD) : 0,
+                        "color", "#3B82F6"));
 
         // Payment methods lists for Sales screen
         java.util.List<Map<String, Object>> paymentMethods = java.util.List.of(
-            Map.of("method", "UPI", "amount", todayUpiSales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayUpiSales.doubleValue() * 100) / totalSalesD) : 0, "color", "#0B6B50"),
-            Map.of("method", "Cash", "amount", todayCashSales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayCashSales.doubleValue() * 100) / totalSalesD) : 0, "color", "#F59E0B"),
-            Map.of("method", "Card", "amount", todayCardSales.doubleValue(), "pct", totalSalesD > 0 ? Math.round((todayCardSales.doubleValue() * 100) / totalSalesD) : 0, "color", "#3B82F6")
-        );
+                Map.of("method", "UPI", "amount", todayUpiSales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayUpiSales.doubleValue() * 100) / totalSalesD) : 0, "color",
+                        "#0B6B50"),
+                Map.of("method", "Cash", "amount", todayCashSales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayCashSales.doubleValue() * 100) / totalSalesD) : 0, "color",
+                        "#F59E0B"),
+                Map.of("method", "Card", "amount", todayCardSales.doubleValue(), "pct",
+                        totalSalesD > 0 ? Math.round((todayCardSales.doubleValue() * 100) / totalSalesD) : 0, "color",
+                        "#3B82F6"));
 
         // Peak hours grouping for today's orders
         int slot8to10 = 0, slot12to2 = 0, slot4to6 = 0, slot7to9 = 0, slot9to11 = 0;
         for (com.smartdine.coreheart.Order o : allOrders) {
             if (o.getStartedAt().isAfter(todayStart)) {
                 int hour = o.getStartedAt().getHour();
-                if (hour >= 8 && hour < 10) slot8to10++;
-                else if (hour >= 12 && hour < 14) slot12to2++;
-                else if (hour >= 16 && hour < 18) slot4to6++;
-                else if (hour >= 19 && hour < 21) slot7to9++;
-                else if (hour >= 21 && hour < 23) slot9to11++;
+                if (hour >= 8 && hour < 10)
+                    slot8to10++;
+                else if (hour >= 12 && hour < 14)
+                    slot12to2++;
+                else if (hour >= 16 && hour < 18)
+                    slot4to6++;
+                else if (hour >= 19 && hour < 21)
+                    slot7to9++;
+                else if (hour >= 21 && hour < 23)
+                    slot9to11++;
             }
         }
-        int maxSlots = Math.max(1, Math.max(slot8to10, Math.max(slot12to2, Math.max(slot4to6, Math.max(slot7to9, slot9to11)))));
+        int maxSlots = Math.max(1,
+                Math.max(slot8to10, Math.max(slot12to2, Math.max(slot4to6, Math.max(slot7to9, slot9to11)))));
         java.util.List<Map<String, Object>> peakHours = java.util.List.of(
-            Map.of("slot", "8 AM – 10 AM", "label", "Breakfast Rush", "orders", slot8to10, "pct", Math.round((slot8to10 * 100.0) / maxSlots)),
-            Map.of("slot", "12 PM – 2 PM", "label", "Lunch Rush", "orders", slot12to2, "pct", Math.round((slot12to2 * 100.0) / maxSlots)),
-            Map.of("slot", "4 PM – 6 PM", "label", "Evening Snacks", "orders", slot4to6, "pct", Math.round((slot4to6 * 100.0) / maxSlots)),
-            Map.of("slot", "7 PM – 9 PM", "label", "Dinner Rush", "orders", slot7to9, "pct", Math.round((slot7to9 * 100.0) / maxSlots)),
-            Map.of("slot", "9 PM – 11 PM", "label", "Late Dinner", "orders", slot9to11, "pct", Math.round((slot9to11 * 100.0) / maxSlots))
-        );
+                Map.of("slot", "8 AM – 10 AM", "label", "Breakfast Rush", "orders", slot8to10, "pct",
+                        Math.round((slot8to10 * 100.0) / maxSlots)),
+                Map.of("slot", "12 PM – 2 PM", "label", "Lunch Rush", "orders", slot12to2, "pct",
+                        Math.round((slot12to2 * 100.0) / maxSlots)),
+                Map.of("slot", "4 PM – 6 PM", "label", "Evening Snacks", "orders", slot4to6, "pct",
+                        Math.round((slot4to6 * 100.0) / maxSlots)),
+                Map.of("slot", "7 PM – 9 PM", "label", "Dinner Rush", "orders", slot7to9, "pct",
+                        Math.round((slot7to9 * 100.0) / maxSlots)),
+                Map.of("slot", "9 PM – 11 PM", "label", "Late Dinner", "orders", slot9to11, "pct",
+                        Math.round((slot9to11 * 100.0) / maxSlots)));
 
         // Daily trend grouping (Mon-Sun of this week)
         java.util.List<Map<String, Object>> dailyTrend = new java.util.ArrayList<>();
-        String[] days = {"Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"};
+        String[] days = { "Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun" };
         java.time.LocalDate todayLocalDate = java.time.LocalDate.now();
         int currentDayOfWeek = todayLocalDate.getDayOfWeek().getValue(); // 1 = Mon, 7 = Sun
-        
+
         for (int i = 1; i <= 7; i++) {
             int offset = i - currentDayOfWeek;
             java.time.LocalDate dayDate = todayLocalDate.plusDays(offset);
             java.time.LocalDateTime dayS = dayDate.atStartOfDay();
             java.time.LocalDateTime dayE = dayS.plusDays(1);
-            
+
             java.math.BigDecimal daySales = java.math.BigDecimal.ZERO;
             for (com.smartdine.coreheart.Order o : allOrders) {
                 if (o.getStatus() == com.smartdine.coreheart.OrderStatus.PAID &&
-                    o.getStartedAt().isAfter(dayS) && o.getStartedAt().isBefore(dayE)) {
+                        o.getStartedAt().isAfter(dayS) && o.getStartedAt().isBefore(dayE)) {
                     daySales = daySales.add(o.getGrandTotal());
                 }
             }
-            dailyTrend.add(Map.of("name", days[i-1], "sales", daySales.doubleValue()));
+            dailyTrend.add(Map.of("name", days[i - 1], "sales", daySales.doubleValue()));
         }
 
         // Weekly trend grouping (Last 4 weeks)
@@ -728,26 +853,26 @@ public class ActivationApiController {
             java.math.BigDecimal wSales = java.math.BigDecimal.ZERO;
             for (com.smartdine.coreheart.Order o : allOrders) {
                 if (o.getStatus() == com.smartdine.coreheart.OrderStatus.PAID &&
-                    o.getStartedAt().isAfter(wS) && o.getStartedAt().isBefore(wE)) {
+                        o.getStartedAt().isAfter(wS) && o.getStartedAt().isBefore(wE)) {
                     wSales = wSales.add(o.getGrandTotal());
                 }
             }
-            weeklyTrend.add(Map.of("name", "Wk " + (4-i), "sales", wSales.doubleValue()));
+            weeklyTrend.add(Map.of("name", "Wk " + (4 - i), "sales", wSales.doubleValue()));
         }
 
         // Monthly trend grouping (Last 6 months)
         java.util.List<Map<String, Object>> monthlyTrend = new java.util.ArrayList<>();
-        String[] months = {"Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"};
+        String[] months = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" };
         java.time.LocalDate currentMonthDate = todayLocalDate.minusMonths(5);
         for (int i = 0; i < 6; i++) {
             java.time.LocalDate mDate = currentMonthDate.plusMonths(i);
             java.time.LocalDateTime mS = mDate.withDayOfMonth(1).atStartOfDay();
             java.time.LocalDateTime mE = mS.plusMonths(1);
-            
+
             java.math.BigDecimal mSales = java.math.BigDecimal.ZERO;
             for (com.smartdine.coreheart.Order o : allOrders) {
                 if (o.getStatus() == com.smartdine.coreheart.OrderStatus.PAID &&
-                    o.getStartedAt().isAfter(mS) && o.getStartedAt().isBefore(mE)) {
+                        o.getStartedAt().isAfter(mS) && o.getStartedAt().isBefore(mE)) {
                     mSales = mSales.add(o.getGrandTotal());
                 }
             }
@@ -758,7 +883,8 @@ public class ActivationApiController {
         java.util.List<String> pulse = new java.util.ArrayList<>();
         if (todayOrdersCount > 0) {
             pulse.add("Dine-in is your leading channel today with " + todayDineInCount + " orders.");
-            pulse.add("Average order value stands at ₹" + Math.round(todaySales.doubleValue() / todayOrdersCount) + ".");
+            pulse.add(
+                    "Average order value stands at ₹" + Math.round(todaySales.doubleValue() / todayOrdersCount) + ".");
             pulse.add("Live sync is active. System is running healthy.");
         } else {
             pulse.add("Welcome to Surabhi SmartDine! Connect your POS client to seed menus.");
@@ -768,17 +894,22 @@ public class ActivationApiController {
 
         // Comparison cards
         java.math.BigDecimal compDiff = todaySales.subtract(yesterdaySales);
-        double compPct = yesterdaySales.doubleValue() > 0 ? Math.round((compDiff.doubleValue() * 100.0) / yesterdaySales.doubleValue()) : 0.0;
+        double compPct = yesterdaySales.doubleValue() > 0
+                ? Math.round((compDiff.doubleValue() * 100.0) / yesterdaySales.doubleValue())
+                : 0.0;
         java.util.List<Map<String, Object>> comparison = java.util.List.of(
-            Map.of("label", "Today vs Yesterday", "diff", compDiff.doubleValue(), "pct", compPct, "positive", compDiff.doubleValue() >= 0),
-            Map.of("label", "This Week vs Last Week", "diff", weeklySales.doubleValue(), "pct", 0.0, "positive", true),
-            Map.of("label", "This Month vs Last Month", "diff", monthlySales.doubleValue(), "pct", 0.0, "positive", true)
-        );
+                Map.of("label", "Today vs Yesterday", "diff", compDiff.doubleValue(), "pct", compPct, "positive",
+                        compDiff.doubleValue() >= 0),
+                Map.of("label", "This Week vs Last Week", "diff", weeklySales.doubleValue(), "pct", 0.0, "positive",
+                        true),
+                Map.of("label", "This Month vs Last Month", "diff", monthlySales.doubleValue(), "pct", 0.0, "positive",
+                        true));
 
         // Insights for Sales screen
         java.util.List<String> salesInsights = new java.util.ArrayList<>();
         if (todayOrdersCount > 0) {
-            salesInsights.add("Sales today reached ₹" + todaySales.doubleValue() + ", driven by " + todayOrdersCount + " covers.");
+            salesInsights.add("Sales today reached ₹" + todaySales.doubleValue() + ", driven by " + todayOrdersCount
+                    + " covers.");
             salesInsights.add("UPI was used in " + todayUpiSales.doubleValue() + " worth of transactions.");
             salesInsights.add("Dine-In contributed ₹" + todayDineInSales.doubleValue() + " to today's operations.");
         } else {
@@ -791,12 +922,12 @@ public class ActivationApiController {
         if (!todayOrderIds.isEmpty()) {
             allTodayKots = kotRepository.findByOrderIdIn(todayOrderIds);
         }
-        
+
         int totalKotsCount = allTodayKots.size();
         int completedKotsCount = 0;
         int activeKotsCount = 0;
         int delayedKotsCount = 0;
-        
+
         java.time.LocalDateTime cutoff15m = java.time.LocalDateTime.now().minusMinutes(15);
 
         for (com.smartdine.coreheart.KOT k : allTodayKots) {
@@ -814,12 +945,12 @@ public class ActivationApiController {
         // Real dish prep speed audit from live database KOT items
         java.util.Map<String, int[]> dishStats = new java.util.HashMap<>();
         for (com.smartdine.coreheart.KOT k : allTodayKots) {
-            boolean isKotDelayed = k.getCreatedAt() != null && k.getCreatedAt().isBefore(cutoff15m) 
-                && k.getOverallStatus() != com.smartdine.coreheart.KOTStatus.READY 
-                && k.getOverallStatus() != com.smartdine.coreheart.KOTStatus.SERVED;
+            boolean isKotDelayed = k.getCreatedAt() != null && k.getCreatedAt().isBefore(cutoff15m)
+                    && k.getOverallStatus() != com.smartdine.coreheart.KOTStatus.READY
+                    && k.getOverallStatus() != com.smartdine.coreheart.KOTStatus.SERVED;
             for (com.smartdine.coreheart.KOTItem item : k.getItems()) {
                 String dName = item.getItemName();
-                dishStats.putIfAbsent(dName, new int[]{0, 0});
+                dishStats.putIfAbsent(dName, new int[] { 0, 0 });
                 dishStats.get(dName)[0] += item.getQuantity();
                 if (isKotDelayed) {
                     dishStats.get(dName)[1] += item.getQuantity();
@@ -839,152 +970,156 @@ public class ActivationApiController {
             String station = "Main Kitchen";
             String cat = "Main Course";
             int basePrep = 10;
-            
+
             String nameLower = name.toLowerCase();
-            if (nameLower.contains("naan") || nameLower.contains("roti") || nameLower.contains("tandoor") || nameLower.contains("kebab") || nameLower.contains("tikka")) {
+            if (nameLower.contains("naan") || nameLower.contains("roti") || nameLower.contains("tandoor")
+                    || nameLower.contains("kebab") || nameLower.contains("tikka")) {
                 station = "Tandoor & Grill";
                 cat = "Starters & Breads";
                 basePrep = 8;
                 tandoorItems += totalOrd;
-            } else if (nameLower.contains("soda") || nameLower.contains("juice") || nameLower.contains("tea") || nameLower.contains("coffee") || nameLower.contains("drink") || nameLower.contains("water") || nameLower.contains("bar") || nameLower.contains("lassi")) {
+            } else if (nameLower.contains("soda") || nameLower.contains("juice") || nameLower.contains("tea")
+                    || nameLower.contains("coffee") || nameLower.contains("drink") || nameLower.contains("water")
+                    || nameLower.contains("bar") || nameLower.contains("lassi")) {
                 station = "Bar & Beverages";
                 cat = "Beverages";
                 basePrep = 4;
                 barItems += totalOrd;
-            } else if (nameLower.contains("ice cream") || nameLower.contains("jamun") || nameLower.contains("sweet") || nameLower.contains("kheer") || nameLower.contains("dessert") || nameLower.contains("halwa")) {
+            } else if (nameLower.contains("ice cream") || nameLower.contains("jamun") || nameLower.contains("sweet")
+                    || nameLower.contains("kheer") || nameLower.contains("dessert") || nameLower.contains("halwa")) {
                 station = "Desserts & Pantry";
                 cat = "Dessert";
                 basePrep = 5;
                 dessertItems += totalOrd;
             } else {
                 mainKitchenItems += totalOrd;
-                if (nameLower.contains("biryani")) basePrep = 15;
+                if (nameLower.contains("biryani"))
+                    basePrep = 15;
             }
 
             int calcAvg = delCount > 0 ? basePrep + (delCount * 2) : Math.max(3, basePrep - 1);
             int targetSla = basePrep + 2;
-            int slaPct = totalOrd > 0 ? Math.max(0, Math.min(100, Math.round(((totalOrd - delCount) * 100f) / totalOrd))) : 100;
-            String status = delCount > 0 ? "Delayed" : (calcAvg <= 5 ? "Fastest" : (calcAvg <= targetSla ? "On Time" : "Nearing SLA"));
+            int slaPct = totalOrd > 0
+                    ? Math.max(0, Math.min(100, Math.round(((totalOrd - delCount) * 100f) / totalOrd)))
+                    : 100;
+            String status = delCount > 0 ? "Delayed"
+                    : (calcAvg <= 5 ? "Fastest" : (calcAvg <= targetSla ? "On Time" : "Nearing SLA"));
 
             realDishAudit.add(Map.of(
-                "id", dishIdCounter++,
-                "name", name,
-                "category", cat,
-                "station", station,
-                "avgPrepTime", calcAvg + " min",
-                "targetSla", targetSla + " min",
-                "totalOrders", totalOrd,
-                "delays", delCount,
-                "status", status,
-                "slaScore", slaPct + "%"
-            ));
+                    "id", dishIdCounter++,
+                    "name", name,
+                    "category", cat,
+                    "station", station,
+                    "avgPrepTime", calcAvg + " min",
+                    "targetSla", targetSla + " min",
+                    "totalOrders", totalOrd,
+                    "delays", delCount,
+                    "status", status,
+                    "slaScore", slaPct + "%"));
         }
 
         int grandItemCount = mainKitchenItems + tandoorItems + barItems + dessertItems;
         java.util.List<Map<String, Object>> realStationWorkload = java.util.List.of(
-            Map.of("name", "Main Kitchen", "count", mainKitchenItems, "pct", grandItemCount > 0 ? Math.round((mainKitchenItems * 100f) / grandItemCount) : 0, "color", "#0B6B50"),
-            Map.of("name", "Tandoor & Grill", "count", tandoorItems, "pct", grandItemCount > 0 ? Math.round((tandoorItems * 100f) / grandItemCount) : 0, "color", "#F59E0B"),
-            Map.of("name", "Bar & Beverages", "count", barItems, "pct", grandItemCount > 0 ? Math.round((barItems * 100f) / grandItemCount) : 0, "color", "#3B82F6"),
-            Map.of("name", "Desserts & Pantry", "count", dessertItems, "pct", grandItemCount > 0 ? Math.round((dessertItems * 100f) / grandItemCount) : 0, "color", "#8B5CF6")
-        );
+                Map.of("name", "Main Kitchen", "count", mainKitchenItems, "pct",
+                        grandItemCount > 0 ? Math.round((mainKitchenItems * 100f) / grandItemCount) : 0, "color",
+                        "#0B6B50"),
+                Map.of("name", "Tandoor & Grill", "count", tandoorItems, "pct",
+                        grandItemCount > 0 ? Math.round((tandoorItems * 100f) / grandItemCount) : 0, "color",
+                        "#F59E0B"),
+                Map.of("name", "Bar & Beverages", "count", barItems, "pct",
+                        grandItemCount > 0 ? Math.round((barItems * 100f) / grandItemCount) : 0, "color", "#3B82F6"),
+                Map.of("name", "Desserts & Pantry", "count", dessertItems, "pct",
+                        grandItemCount > 0 ? Math.round((dessertItems * 100f) / grandItemCount) : 0, "color",
+                        "#8B5CF6"));
 
-        int overallSlaCompliance = totalKotsCount > 0 ? Math.max(0, Math.min(100, Math.round(((totalKotsCount - delayedKotsCount) * 100f) / totalKotsCount))) : 100;
+        int overallSlaCompliance = totalKotsCount > 0
+                ? Math.max(0, Math.min(100, Math.round(((totalKotsCount - delayedKotsCount) * 100f) / totalKotsCount)))
+                : 100;
 
         Map<String, Object> overviewMap = new java.util.HashMap<>();
         overviewMap.put("kpis", Map.of(
-            "sales", Map.of("value", todaySales.doubleValue()),
-            "expenses", Map.of("value", 0.0),
-            "profit", Map.of("value", todaySales.doubleValue()),
-            "orders", Map.of("value", todayOrdersCount)
-        ));
+                "sales", Map.of("value", todaySales.doubleValue()),
+                "expenses", Map.of("value", 0.0),
+                "profit", Map.of("value", todaySales.doubleValue()),
+                "orders", Map.of("value", todayOrdersCount)));
         overviewMap.put("pulse", pulse);
         overviewMap.put("topDishes", topDishes);
         overviewMap.put("kitchen", Map.of(
-            "orderKpis", Map.of(
-                "totalOrders", Map.of("value", totalKotsCount),
-                "activeOrders", Map.of("value", activeKotsCount),
-                "completed", Map.of("value", completedKotsCount),
-                "dineIn", Map.of("value", todayDineInCount),
-                "takeaway", Map.of("value", todayTakeawayCount),
-                "online", Map.of("value", todayDeliveryCount)
-            ),
-            "overallKpis", Map.of(
-                "avgPrepTime", totalKotsCount > 0 ? "11.4 min" : "0.0 min",
-                "targetSla", "12.0 min",
-                "slaCompliance", overallSlaCompliance + "%",
-                "delayedOrders", delayedKotsCount,
-                "efficiencyScore", (overallSlaCompliance > 90 ? "98%" : "85%"),
-                "kitchenLoad", (activeKotsCount > 5 ? "65%" : "13%")
-            ),
-            "stationWorkload", realStationWorkload,
-            "dishPrepSpeedAudit", realDishAudit
-        ));
+                "orderKpis", Map.of(
+                        "totalOrders", Map.of("value", totalKotsCount),
+                        "activeOrders", Map.of("value", activeKotsCount),
+                        "completed", Map.of("value", completedKotsCount),
+                        "dineIn", Map.of("value", todayDineInCount),
+                        "takeaway", Map.of("value", todayTakeawayCount),
+                        "online", Map.of("value", todayDeliveryCount)),
+                "overallKpis", Map.of(
+                        "avgPrepTime", totalKotsCount > 0 ? "11.4 min" : "0.0 min",
+                        "targetSla", "12.0 min",
+                        "slaCompliance", overallSlaCompliance + "%",
+                        "delayedOrders", delayedKotsCount,
+                        "efficiencyScore", (overallSlaCompliance > 90 ? "98%" : "85%"),
+                        "kitchenLoad", (activeKotsCount > 5 ? "65%" : "13%")),
+                "stationWorkload", realStationWorkload,
+                "dishPrepSpeedAudit", realDishAudit));
         overviewMap.put("businessMix", java.util.List.of(
-            Map.of("name", "Dine In", "value", dineInPct),
-            Map.of("name", "Takeaway", "value", takeawayPct),
-            Map.of("name", "Delivery", "value", deliveryPct)
-        ));
+                Map.of("name", "Dine In", "value", dineInPct),
+                Map.of("name", "Takeaway", "value", takeawayPct),
+                Map.of("name", "Delivery", "value", deliveryPct)));
         overviewMap.put("insights", java.util.List.of(
-            Map.of("priority", "Low", "title", "Database Status", "desc", "System synchronized and healthy."),
-            Map.of("priority", "Medium", "title", "Live Connection", "desc", "POS terminal is active and broadcasting.")
-        ));
+                Map.of("priority", "Low", "title", "Database Status", "desc", "System synchronized and healthy."),
+                Map.of("priority", "Medium", "title", "Live Connection", "desc",
+                        "POS terminal is active and broadcasting.")));
         overviewMap.put("charts", Map.of(
-            "Daily", dailyTrend,
-            "Weekly", weeklyTrend,
-            "Monthly", monthlyTrend
-        ));
+                "Daily", dailyTrend,
+                "Weekly", weeklyTrend,
+                "Monthly", monthlyTrend));
 
         // Top level response structure for all screens
         Map<String, Object> response = new java.util.HashMap<>();
         response.put("overview", overviewMap);
         response.put("sales", Map.of(
-            "kpis", Map.of(
-                "today", Map.of("value", todaySales.doubleValue(), "change", compPct, "positive", compDiff.doubleValue() >= 0),
-                "yesterday", Map.of("value", yesterdaySales.doubleValue(), "change", 0, "positive", true),
-                "weekly", Map.of("value", weeklySales.doubleValue(), "change", 0, "positive", true),
-                "monthly", Map.of("value", monthlySales.doubleValue(), "change", 0, "positive", true)
-            ),
-            "comparison", comparison,
-            "distribution", distribution,
-            "trends", Map.of(
-                "Daily", dailyTrend,
-                "Weekly", weeklyTrend,
-                "Monthly", monthlyTrend
-            ),
-            "peakHours", peakHours,
-            "paymentMethods", paymentMethods,
-            "insights", salesInsights
-        ));
+                "kpis", Map.of(
+                        "today",
+                        Map.of("value", todaySales.doubleValue(), "change", compPct, "positive",
+                                compDiff.doubleValue() >= 0),
+                        "yesterday", Map.of("value", yesterdaySales.doubleValue(), "change", 0, "positive", true),
+                        "weekly", Map.of("value", weeklySales.doubleValue(), "change", 0, "positive", true),
+                        "monthly", Map.of("value", monthlySales.doubleValue(), "change", 0, "positive", true)),
+                "comparison", comparison,
+                "distribution", distribution,
+                "trends", Map.of(
+                        "Daily", dailyTrend,
+                        "Weekly", weeklyTrend,
+                        "Monthly", monthlyTrend),
+                "peakHours", peakHours,
+                "paymentMethods", paymentMethods,
+                "insights", salesInsights));
         response.put("kitchen", Map.of(
-            "orderKpis", Map.of(
-                "total", todayOrdersCount,
-                "active", 0,
-                "completed", todayOrdersCount,
-                "dineIn", todayDineInCount,
-                "takeaway", todayTakeawayCount,
-                "online", todayDeliveryCount
-            ),
-            "orderDistribution", java.util.List.of(
-                Map.of("name", "Dine-In", "value", todayDineInCount, "color", "#0B6B50"),
-                Map.of("name", "Takeaway", "value", todayTakeawayCount, "color", "#F59E0B"),
-                Map.of("name", "Online", "value", todayDeliveryCount, "color", "#3B82F6")
-            ),
-            "kitchenKpis", java.util.List.of(
-                Map.of("label", "Avg Prep Time", "value", todayOrdersCount > 0 ? "12 mins" : "—", "change", 0, "positive", true),
-                Map.of("label", "Kitchen Load", "value", todayOrdersCount > 0 ? "Normal" : "Light", "change", 0, "positive", true),
-                Map.of("label", "Service Quality", "value", "100%", "change", 0, "positive", true)
-            ),
-            "kitchenStatus", Map.of("status", todayOrdersCount > 0 ? "Excellent" : "Smooth"),
-            "liveSummary", java.util.List.of(
-                Map.of("label", "Completed Tickets", "value", todayOrdersCount, "color", "#0B6B50"),
-                Map.of("label", "Active Tickets", "value", 0, "color", "#3B82F6"),
-                Map.of("label", "Delayed Tickets", "value", 0, "color", "#DC2626")
-            ),
-            "delayedItems", java.util.Collections.emptyList(),
-            "operationalInsights", java.util.List.of(
-                Map.of("text", "Kitchen operations are currently running normal.")
-            )
-        ));
+                "orderKpis", Map.of(
+                        "total", todayOrdersCount,
+                        "active", 0,
+                        "completed", todayOrdersCount,
+                        "dineIn", todayDineInCount,
+                        "takeaway", todayTakeawayCount,
+                        "online", todayDeliveryCount),
+                "orderDistribution", java.util.List.of(
+                        Map.of("name", "Dine-In", "value", todayDineInCount, "color", "#0B6B50"),
+                        Map.of("name", "Takeaway", "value", todayTakeawayCount, "color", "#F59E0B"),
+                        Map.of("name", "Online", "value", todayDeliveryCount, "color", "#3B82F6")),
+                "kitchenKpis", java.util.List.of(
+                        Map.of("label", "Avg Prep Time", "value", todayOrdersCount > 0 ? "12 mins" : "—", "change", 0,
+                                "positive", true),
+                        Map.of("label", "Kitchen Load", "value", todayOrdersCount > 0 ? "Normal" : "Light", "change", 0,
+                                "positive", true),
+                        Map.of("label", "Service Quality", "value", "100%", "change", 0, "positive", true)),
+                "kitchenStatus", Map.of("status", todayOrdersCount > 0 ? "Excellent" : "Smooth"),
+                "liveSummary", java.util.List.of(
+                        Map.of("label", "Completed Tickets", "value", todayOrdersCount, "color", "#0B6B50"),
+                        Map.of("label", "Active Tickets", "value", 0, "color", "#3B82F6"),
+                        Map.of("label", "Delayed Tickets", "value", 0, "color", "#DC2626")),
+                "delayedItems", java.util.Collections.emptyList(),
+                "operationalInsights", java.util.List.of(
+                        Map.of("text", "Kitchen operations are currently running normal."))));
 
         String pingKey = (code != null && !code.trim().isEmpty()) ? code.trim() : "default";
         Long lastPing = lastBillerPingMap.get(pingKey);
